# generatorlibs

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/root/generatorlibs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: calcs.cpp  calcs.h
app/src/main/java/com/example/root/generatorlibs/: MainActivity.java
app/src/main/jni/: mynativecalcsJNI.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/root/generatorlibs/: ExampleUnitTest.java
